Fix css to look just ok on mobile

--- a/trails/src/index.css
+++ b/trails/src/index.css
@@ -47,6 +47,9 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /* This is a hack to get it looking good on mobile. Fix this!
+    */
+    min-width: 500px; 
 }
 
 .card-icon {
@@ -100,9 +103,9 @@ body {
 }
 
 @media (max-width:600px)  {
-    .card {
+    /* .card {
         width: 80%;
-    }
+    } */
 }
 
 .card-photo {
